// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render properly - as Checkbox 1`] = `
<DocumentFragment>
  <div
    class="lbh-form-group govuk-form-group"
  >
    <fieldset
      class="govuk-fieldset"
    >
      <legend
        class="govuk-fieldset__legend govuk-fieldset__legend--m"
      >
        My Checkbox 
      </legend>
      <div
        class="govuk-checkboxes lbh-checkboxes"
      >
        <div
          class="govuk-checkboxes__item"
        >
          <input
            class="lbh-checkboxes govuk-checkboxes__input"
            id="my-checkbox-foo"
            name="my-checkbox"
            type="checkbox"
            value="foo"
          />
          <label
            class="govuk-label govuk-checkboxes__label"
            for="my-checkbox-foo"
          >
            Foo 
          </label>
        </div>
        <div
          class="govuk-checkboxes__item"
        >
          <input
            class="lbh-checkboxes govuk-checkboxes__input"
            id="my-checkbox-bar"
            name="my-checkbox"
            type="checkbox"
            value="bar"
          />
          <label
            class="govuk-label govuk-checkboxes__label"
            for="my-checkbox-bar"
          >
            Bar 
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`Checkbox should render properly - as Tickbox 1`] = `
<DocumentFragment>
  <div
    class="lbh-form-group govuk-form-group"
  >
    <div
      class="govuk-checkboxes lbh-checkboxes"
    >
      <div
        class="govuk-checkboxes__item"
      >
        <input
          class="lbh-checkboxes govuk-checkboxes__input"
          id="my-checkbox"
          name="my-checkbox"
          type="checkbox"
          value=""
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="my-checkbox"
        >
          My Checkbox 
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
